+ update_user all

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -16,16 +16,16 @@
     <th>ID</th>
     <th></th>
    </tr>
-{% for user in show_users_var %}
+    {% for user in show_users_var %}
         <tr>
      <form action="/update_user" method="post">
-    <td> <input type="text" name="update_user" value="{{ user.login }}"  readonly> </td>
-    <td> <input type="text" maxlength="16" name="user_password" value="{{ user.password }}" > </td>
-    <td> <input type="text" maxlength="9" name="user_id"  value="{{ user.id }}" > </td>>
+    <td> <input type="text" size="16" name="update_user" value="{{ user.login }}"  readonly> </td>
+    <td> <input type="text" size="16" maxlength="16" name="user_password" value="{{ user.password }}" > </td>
+    <td> <input type="text" size="9" maxlength="9" name="user_id"  value="{{ user.id }}" > </td>>
     <td> <input type="submit" value="Ok" > </td>>
             </form>
         </tr>
-{% endfor %}
+    {% endfor %}
 </table>
 <br>
 <a href="{{ url_for('show')}}">Главная</a>
