--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -21,8 +21,8 @@
      <form action="/update_user" method="post">
     <td> <input type="text" size="16" name="update_user" value="{{ user.login }}"  readonly> </td>
     <td> <input type="text" size="16" maxlength="16" name="user_password" value="{{ user.password }}" > </td>
-    <td> <input type="text" size="9" maxlength="9" name="user_id"  value="{{ user.id }}" > </td>>
-    <td> <input type="submit" value="Ok" > </td>>
+    <td> <input type="text" size="9" maxlength="9" name="user_id"  value="{{ user.id }}" > </td>
+    <td> <input type="submit" value="Ok" > </td>
             </form>
         </tr>
     {% endfor %}
@@ -30,7 +30,6 @@
 <br>
 <a href="{{ url_for('show')}}">Главная</a>
 <br>
-..
 <br>
 </body>
 </html>
