+ show_users + edit login

--- a/templates/show_users.html
+++ b/templates/show_users.html
@@ -28,7 +28,7 @@
     {% endfor %}
 </table>
 <br>
-
+<a href="{{ url_for('new_user') }}">Новый пользователь</a>
 <br>
 <a href="{{ url_for('show')}}">Главная</a>
 <br>
