+ new_users add

--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -15,9 +15,9 @@
    <form action="{{ url_for('new_user_add') }}" method=post>
         <br>
         <br>
-        <input type="text" name="user_fio">
-        <input type="text" name="user_password">
-        <input type="text" name="user_id_telegram">
+        ФИО<input type="text" name="user_fio"> <br>
+        Пароль<input type="text" name="user_password"> <br>
+        ID telegram<input type="text" name="user_id_telegram">
         <br>
         <br>
         <input type=submit value=Создать>
